--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "spy-pop-party",
+  "name": "spy-surveillance-system",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "framer-motion": "^10.16.4",
     "lucide-react": "^0.284.0"
   },
   "scripts": {
